# bevy_mod_physx

./: .gitignore  .rustfmt.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  README.md
.github/workflows/: clippy.yml
assets/cybertruck/: hull.glb  license.txt  wheel.glb
examples/: articulation.rs  cube_stacks.rs  detect_contacts.rs  getting_started.rs  helloworld.rs  kinematic.rs  raycast.rs  test_articulation_drive.rs  test_articulation_drives.rs  test_convex_shapes.rs  test_damping.rs  test_fixed_timestep.rs  test_mass.rs  test_restitution.rs  vehicle.rs
examples/common/: debug_lines.rs  debug_render.rs  mod.rs  orbit_camera.rs
examples/flying_camera/: LICENSE  README.md  mod.rs
examples/snippets/: README.md  damping.rs  mass_properties.rs  material.rs  minimal.rs  raycast.rs  velocity.rs
src/: assets.rs  callbacks.rs  components.rs  events.rs  lib.rs  prelude.rs  raycast.rs  render.rs  resources.rs  sleep.rs  systems.rs  type_bridge.rs  types.rs
src/core/: articulation.rs  foundation.rs  geometry.rs  material.rs  mod.rs  rigid_dynamic.rs  rigid_static.rs  scene.rs  shape.rs
src/core/systems/: create_actors.rs  mod.rs  sync_transforms.rs
src/physx/: Cargo.toml
src/physx/src/: convex_mesh.rs  height_field.rs  lib.rs  physics.rs  prelude.rs  triangle_mesh.rs
src/physx/src/traits/: class.rs  user_data.rs
src/physx/src/vehicles/: mod.rs  vehicle_ackermann_geometry_data.rs  vehicle_anti_roll_bar_data.rs  vehicle_autobox_data.rs  vehicle_clutch_data.rs  (+26 more)
src/physx_extras/: actor_map.rs  convex_mesh.rs  height_field.rs  mod.rs  triangle_mesh.rs
src/plugins/: articulation.rs  damping.rs  debug_render.rs  external_force.rs  kinematic.rs  lock_flags.rs  mass_properties.rs  max_velocity.rs  mod.rs  name.rs  shape_filter_data.rs  shape_offsets.rs  sleep.rs  sleep_control.rs  sleep_marker.rs  velocity.rs
src/systems/: create_actors.rs  mod.rs  sync_transforms.rs
src/utils/: events.rs  mod.rs  raycast.rs  type_bridge.rs
src/utils/physx_extras/: mod.rs  triangle_mesh.rs
src/vehicles/: components.rs  mod.rs  simulation.rs  vehicle_differential_4w_data.rs  vehicle_differential_nw_data.rs  vehicle_drive.rs  vehicle_drive_4w.rs  vehicle_drive_4w_raw_input_data.rs  vehicle_drive_dyn_data.rs  vehicle_drive_nw.rs  vehicle_drive_nw_raw_input_data.rs  vehicle_drive_sim_data.rs  vehicle_drive_sim_data_4w.rs  vehicle_drive_sim_data_nw.rs  vehicle_drive_tank.rs  vehicle_drive_tank_raw_input_data.rs  vehicle_engine_data.rs  vehicle_gears_data.rs  vehicle_nodrive.rs  vehicle_tire_load_filter_data.rs  vehicle_util_control.rs  vehicle_util_setup.rs  vehicle_wheels.rs  vehicle_wheels_dyn_data.rs  vehicle_wheels_sim_data.rs
src/vehicles/physx_internal/: class.rs  mod.rs  owner.rs
