[package]
name = "bevy_mod_physx"
version = "0.0.1"
authors = ["Alex Kocharin <alex@kocharin.ru>"]
description = "PhysX plugin for Bevy"
readme = "README.md"
license = "MIT"
edition = "2021"

[lib]
name = "bevy_mod_physx"
path = "src/lib.rs"

[dependencies]
bevy = "0.11.0"
derive_more = "0.99.17"
enumflags2 = "0.7.7"
physx = "0.18.0"
physx-sys = "0.11.3"
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
bevy-inspector-egui = "0.19.0"

[features]
serialize = ["dep:serde", "bevy/serialize"]
