[package]
name = "bevy_mod_physx"
version = "0.5.0"
authors = ["Alex Kocharin <alex@kocharin.ru>"]
description = "PhysX plugin for Bevy"
documentation = "https://docs.rs/bevy_mod_physx"
homepage = "https://github.com/rlidwka/bevy_mod_physx"
repository = "https://github.com/rlidwka/bevy_mod_physx"
readme = "README.md"
keywords = ["bevy", "physx", "gamedev", "physics"]
license = "MIT"
categories = ["game-development", "simulation"]
edition = "2021"

[lib]
name = "bevy_mod_physx"
path = "src/lib.rs"

[dependencies]
bevy = "0.14.0"
derive_more = "0.99.17"
enumflags2 = "0.7.7"
physx = "0.19.0"
physx-sys = "0.11.5"
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
bevy-inspector-egui = "0.25.0"

[features]
serialize = ["dep:serde", "bevy/serialize"]
