[package]
name = "bevy_mod_physx"
version = "0.7.0"
authors = ["Alex Kocharin <alex@kocharin.ru>"]
description = "PhysX plugin for Bevy"
documentation = "https://docs.rs/bevy_mod_physx"
homepage = "https://github.com/rlidwka/bevy_mod_physx"
repository = "https://github.com/rlidwka/bevy_mod_physx"
readme = "README.md"
keywords = ["bevy", "physx", "gamedev", "physics"]
license = "MIT"
categories = ["game-development", "simulation"]
edition = "2021"

[lib]
name = "bevy_mod_physx"
path = "src/lib.rs"

[dependencies.bevy]
version = "0.15.0"
default-features = false
features = ["bevy_asset", "bevy_render"]

[dependencies]
enumflags2 = "0.7.7"
physx = "0.19.0"
physx-sys = "0.11.5"
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies.bevy]
# cargo is expected to pick up the same version as above
version = ">= 0.0.0"
default-features = false
features = [
    "bevy_core_pipeline", "bevy_gilrs", "bevy_pbr", "bevy_window", "bevy_winit", "tonemapping_luts", "x11"
]

[dev-dependencies.bevy-inspector-egui]
version = "0.28.0"
default-features = false
features = ["bevy_image", "bevy_pbr", "bevy_render", "egui_clipboard"]

[features]
default = ["debug-render"]
debug-render = ["bevy/bevy_gizmos"]
serialize = ["dep:serde", "bevy/serialize"]
